--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://shailjayadav30.github.io/landingpage-/",
+  "homepage": "https://shailjayadav30.github.io/landingpage/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
